@@ -1,5 +1,9 @@
 2011-05-24  Sebastien Binet  <sebastien.binet@cern.ch>
 
+	* tagging PyUtils-00-10-77
+	* fix bug 82176: gzip the athfile-cache files
+	* python/AthFile/impl.py
+
 	* tagging PyUtils-00-10-76
 	* fix bug 82547: proper quoting of avn command arguments:
 	  avn ci -m "It's an abbreviation. an escaped double-quote: \""
